--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
           <p class="currentPoints2">0</p>
         </div>
       </section>
-      <div class="newGame">🔄 New Game</div>
-      <div class="rollDice">🎲 Roll Dice</div>
-      <div class="hold">📥 Hold</div>
+      <div class="newGame"><button class="button-New">🔄 New Game</button></div>
+      <div class="rollDice">
+        <button class="button--Roll">🎲 Roll Dice</button>
+      </div>
+      <div class="hold"><button class="button--Roll">📥 Hold</button></div>
+      <img class="dice hidden" src="images/dice-1.png" alt="" />
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
